--- a/hadoop_on_wsl.tex
+++ b/hadoop_on_wsl.tex
@@ -23,7 +23,7 @@ sudo apt purge openssh-server
 sudo apt install openssh-server
 sudo service ssh start
 \end{verbatim}
-to fix an issue with SSH. 
+to fix an issue with SSH.
 
 \item Then, do
 
@@ -56,7 +56,7 @@ This opens an editor (nano). In nano, using  \verb+ctrl-o+ to save, \verb+ctrl-x
 \begin{verbatim}
 export JAVA_HOME=${JAVA_HOME}
 \end{verbatim}
-so that the path equals the one you wrote down earlier. Be careful not to put a slash and no space before the path; for me, this yields
+so that the path equals the one you wrote down earlier. Be careful to put a slash and no space before the path; for me, this yields
 \begin{verbatim}
 export JAVA_HOME=/usr/lib/jvm/java-8-openjdk-amd64
 \end{verbatim}
@@ -112,7 +112,7 @@ and then point your browser at \verb+http://localhost:50070+. Note that while Ha
 \begin{verbatim}
 sbin/stop-dfs.sh
 \end{verbatim}
-\item Note that the next time you open bash, you have to do 
+\item Note that the next time you open bash, you have to do
 \begin{verbatim}
 cd hadoop-2.9.1
 \end{verbatim}
